--- a/release.json
+++ b/release.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://dl.dropbox.com/s/tcpnxgggv6qm6fx/windows-installer.zip?dl=0",
+  "url": "https://dl.dropbox.com/s/tcpnxgggv6qm6fx/windows-installer.zip",
   "name": "",
   "notes": "Newest update",
   "pub_date": "2016-11-20T15:18:48.988Z"
