--- a/release.json
+++ b/release.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://dl.dropbox.com/s/tcpnxgggv6qm6fx/windows-installer.zip",
+  "url": "https://github.com/stevo2105/btctrade/releases/download/1.0.1/ProfilePassSetup.exe",
   "name": "",
   "notes": "Newest update",
   "pub_date": "2016-11-20T15:18:48.988Z"
